# nb-nebi-kernels

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yaml
src/nb_nebi_kernels/: __init__.py  discovery.py  install.py  launcher.py  manager.py
src/nb_nebi_kernels/jupyter-config/jupyter_server_config.d/: nb_nebi_kernels.json
tests/: test_discovery.py  test_install.py  test_launcher.py  test_manager.py
