[project]
name = "nb-nebi-kernels"
version = "0.1.0"
description = "Jupyter KernelSpecManager that discovers kernels from nebi-tracked pixi workspaces"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "OpenTeams" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "jupyter_client>=8.0.0",
    "jupyter_core>=5.0.0",
    "jupyter_server>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/nebari-dev/nb-nebi-kernels"
Repository = "https://github.com/nebari-dev/nb-nebi-kernels"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nb_nebi_kernels"]

[tool.hatch.build.targets.wheel.shared-data]
"src/nb_nebi_kernels/jupyter-config/jupyter_server_config.d/nb_nebi_kernels.json" = "etc/jupyter/jupyter_server_config.d/nb_nebi_kernels.json"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.10"

[tool.pixi.pypi-dependencies]
nb-nebi-kernels = { path = ".", editable = true }

[tool.pixi.feature.test.dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=5.0.0"

[tool.pixi.feature.lint.dependencies]
ruff = ">=0.6.0"
mypy = ">=1.11.0"

[tool.pixi.feature.dev.dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=5.0.0"
ruff = ">=0.6.0"
mypy = ">=1.11.0"

[tool.pixi.feature.e2e.dependencies]
jupyterlab = ">=4.0.0"
ipykernel = ">=6.0.0"
pixi = "*"

[tool.pixi.environments]
default = { features = [], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
lint = { features = ["lint"], solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
e2e = { features = ["e2e"], solve-group = "default" }

[tool.pixi.feature.test.tasks]
test = { cmd = "pytest", depends-on = [] }
test-cov = { cmd = "pytest --cov=src/nb_nebi_kernels --cov-report=term-missing", depends-on = [] }

[tool.pixi.feature.lint.tasks]
lint = "ruff check src tests"
format = "ruff format src tests"
typecheck = "mypy src"

[tool.pixi.feature.e2e.tasks]
# Copy jupyter config for editable installs (shared-data is wheel-only)
dev-enable = "cp src/nb_nebi_kernels/jupyter-config/jupyter_server_config.d/nb_nebi_kernels.json $CONDA_PREFIX/etc/jupyter/jupyter_server_config.d/nb_nebi_kernels.json"
lab = { cmd = "jupyter lab", depends-on = ["dev-enable"] }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.coverage.run]
source = ["src/nb_nebi_kernels"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
